--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,4 @@
 SUBDIRS = src
 dist_doc_DATA = README
-dist_sysconf_DATA = xlogin/xloginrc xlogin/lxderc xlogin/xclientsrc xlogin/Xsession
-#dist_sysconf_DATA = systemd/system/getty@tty1.service.d/xlogin.conf
+dist_sysconf_DATA = xlogin/xloginrc xlogin/lxderc xlogin/lxderc_o xlogin/xclientsrc xlogin/Xsession xlogin/xlogin.conf
 
