Include Xsession-arch for archlinux 32/64

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 SUBDIRS = src
 dist_doc_DATA = README
-dist_sysconf_DATA = xlogin/xloginrc xlogin/lxderc xlogin/lxderc_o xlogin/xclientsrc xlogin/Xsession xlogin/xlogin.conf
+dist_sysconf_DATA = xlogin/xloginrc xlogin/lxderc xlogin/lxderc_o xlogin/xclientsrc xlogin/Xsession xlogin/Xsession-arch xlogin/xlogin.conf
 
