--- a/Makefile.in
+++ b/Makefile.in
@@ -324,7 +324,7 @@ top_srcdir = @top_srcdir@
 utmp_group_name = @utmp_group_name@
 SUBDIRS = src
 dist_doc_DATA = README
-dist_sysconf_DATA = xlogin/xloginrc xlogin/lxderc xlogin/lxderc_o xlogin/xclientsrc xlogin/Xsession xlogin/xlogin.conf
+dist_sysconf_DATA = xlogin/xloginrc xlogin/lxderc xlogin/lxderc_o xlogin/xclientsrc xlogin/Xsession xlogin/Xsession-arch xlogin/xlogin.conf
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
